// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`German language Empty input 1`] = `
Array [
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Lightning auf USB A Kabel",
  },
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Zahnbürste, mit 3D White, Weiß",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "AA Batterien, Alkaline — 12er Pack",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Hi-Fi-Mitteltöner, Speaker für die Mittelton-Wiedergabe",
  },
]
`;

exports[`German language Equality 1`] = `
Array [
  Object {
    "id": 20,
    "rating": undefined,
    "title": "[Lightning] [auf] [USB] [A] [Kabel]",
  },
]
`;

exports[`German language Normalization 1`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Hi-Fi-[Mitteltö]ner, Speaker für die Mittelton-Wiedergabe",
  },
]
`;

exports[`German language Normalization 2`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Hi-Fi-[Mitteltö]ner, Speaker für die Mittelton-Wiedergabe",
  },
]
`;

exports[`German language Partiles 1`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Hi-Fi-[Mit]teltöner, Speaker für die Mittelton-Wiedergabe",
  },
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Zahnbürste, [mit] 3D White, Weiß",
  },
]
`;

exports[`German language Stemming 1`] = `
Array [
  Object {
    "id": 10,
    "rating": undefined,
    "title": "[AA] [Batterie]n, Alkaline — 12er Pack",
  },
]
`;
